[gd_scene load_steps=23 format=3 uid="uid://d0doehhwbvt6y"]

[ext_resource type="Texture2D" uid="uid://ceu010cpb03p5" path="res://scenes/ability/drone_ability/drone_idle.png" id="1_3jvnl"]
[ext_resource type="Script" path="res://scenes/ability/drone_ability/drone.gd" id="1_ifj8g"]
[ext_resource type="Texture2D" uid="uid://3avdgkkwwjul" path="res://scenes/ability/drone_ability/Laser.png" id="3_21k4q"]
[ext_resource type="Shader" path="res://scenes/ability/drone_ability/drone.gdshader" id="3_q5nhg"]
[ext_resource type="PackedScene" uid="uid://c5mt23ottkc5y" path="res://scenes/component/hit_box_component.tscn" id="5_p05fi"]
[ext_resource type="Texture2D" uid="uid://cuviqxexm2m1e" path="res://scenes/ability/anvil_ability/anvil_particle.png" id="6_cxvh1"]
[ext_resource type="PackedScene" uid="uid://dt0rgoshv8lg" path="res://scenes/component/random_auido_sounds_component.tscn" id="7_62btt"]
[ext_resource type="AudioStream" uid="uid://d2qhu6clq2yet" path="res://assets/sounds/laser_drone_active.ogg" id="8_122n3"]
[ext_resource type="AudioStream" uid="uid://ch14cn4ib66be" path="res://assets/sounds/laser_drone_cooldown.ogg" id="9_c6tv2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h4uv0"]
atlas = ExtResource("1_3jvnl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gusn4"]
atlas = ExtResource("1_3jvnl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v3e2"]
atlas = ExtResource("1_3jvnl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_abu2b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4uv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gusn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v3e2")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vr0bt"]
shader = ExtResource("3_q5nhg")
shader_parameter/beams = 10
shader_parameter/energy = 10.0
shader_parameter/roughness = 5
shader_parameter/frequency = 15
shader_parameter/speed = 1.0
shader_parameter/thickness = 0.019
shader_parameter/outline_thickness = 0.07
shader_parameter/beam_difference = 0.5
shader_parameter/glow = 0.0
shader_parameter/outline_glow = 0.0
shader_parameter/color = Color(3, 0.3, 1, 1)
shader_parameter/outline_color = Color(3, 0.08, 0.01, 1)
shader_parameter/progress = 1.0
shader_parameter/y_offset = 0.0
shader_parameter/fixed_edge_size = 0.018
shader_parameter/noise_scale = Vector2(1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bhb8r"]
size = Vector2(118, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w74qv"]
size = Vector2(119, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_k5qoq"]

[sub_resource type="Gradient" id="Gradient_4l814"]
colors = PackedColorArray(2, 0, 0.79, 1, 2, 0.1, 0.1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_w14pg"]
gradient = SubResource("Gradient_4l814")

[sub_resource type="Curve" id="Curve_nyq7i"]
_data = [Vector2(0, 0.0421052), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_x8ust"]
curve = SubResource("Curve_nyq7i")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vvtwh"]
emission_shape = 1
emission_sphere_radius = 45.0
particle_flag_disable_z = true
spread = 180.0
flatness = 0.5
gravity = Vector3(0, 0, 0)
orbit_velocity_min = -2.0
orbit_velocity_max = 2.0
scale_min = 0.2
scale_max = 0.5
scale_curve = SubResource("CurveTexture_x8ust")
color_initial_ramp = SubResource("GradientTexture1D_w14pg")

[node name="Drone" type="StaticBody2D"]
collision_layer = 33
script = ExtResource("1_ifj8g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_abu2b")
autoplay = "default"
frame_progress = 0.163156

[node name="LaserRay" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_vr0bt")
position = Vector2(64, -0.65625)
texture = ExtResource("3_21k4q")

[node name="HitBoxComponent" parent="LaserRay" instance=ExtResource("5_p05fi")]
base_damage = 10.0

[node name="LaserCollisionShape" type="CollisionShape2D" parent="LaserRay/HitBoxComponent"]
unique_name_in_owner = true
visible = false
position = Vector2(3, -0.84375)
shape = SubResource("RectangleShape2D_bhb8r")

[node name="LaserRay2" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_vr0bt")
position = Vector2(-66, -0.6)
rotation = 3.14159
texture = ExtResource("3_21k4q")

[node name="HitBoxComponent" parent="LaserRay2" instance=ExtResource("5_p05fi")]
base_damage = 10.0

[node name="LaserCollisionShape2" type="CollisionShape2D" parent="LaserRay2/HitBoxComponent"]
unique_name_in_owner = true
visible = false
position = Vector2(5, -0.1)
shape = SubResource("RectangleShape2D_w74qv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_k5qoq")

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="GPUParticles" type="GPUParticles2D" parent="."]
modulate = Color(2, 2, 2, 1)
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_vvtwh")
texture = ExtResource("6_cxvh1")
fixed_fps = 0
interpolate = false

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -18.0
offset_top = -22.0
offset_right = 17.0
offset_bottom = -14.0
show_percentage = false

[node name="ActiveAuidoSoundComponent" parent="." instance=ExtResource("7_62btt")]
max_distance = 200.0
sounds = Array[AudioStream]([ExtResource("8_122n3")])
min_pitch = 0.9
max_pitch = 1.1

[node name="CooldownAuidoSoundComponent" parent="." instance=ExtResource("7_62btt")]
max_distance = 200.0
sounds = Array[AudioStream]([ExtResource("9_c6tv2")])
min_pitch = 0.9
max_pitch = 1.1
